--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 ﻿{
   "expo": {
-    "name": "网图克星",
+    "name": "百变星君",
     "slug": "zhen-shi-pian-ping-fen",
     "version": "1.0.0",
     "orientation": "portrait",
